2008-05-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BarRenderer.java
    (drawItem): Ensure that minimumBarLength, if used, extends the non-base
    end of the bar.

2008-05-05  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1924543 by Richard West:
    * experimental/org/jfree/experimental/chart/demo/CombinedCategoryPlotDemo1.java:
    New file,
    * experimental/org/jfree/experimental/chart/demo/CombinedXYPlotDemo1.java:
    Likewise,
    * experimental/org/jfree/experimental/chart/plot/CombinedCategoryPlot.java:
    Likewise,
    * experimental/org/jfree/experimental/chart/plot/CombinedXYPlot.java:
    Likewise.    

2008-05-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/ShortTextTitle.java: New file,
    * tests/org/jfree/chart/title/junit/ShortTextTitleTests.java: Likewise.

2008-05-01  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1955483:
    * source/org/jfree/data/xy/XYSeries.java
    (addOrUpdate(Number, Number)): Add a new item if duplicates are allows,
    (addOrUpdate(double, double)): New method.

2008-04-29  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
    (tickLength): New field,
    (HighLowRenderer): Initialise new field,
    (getTickLength): New method,
    (setTickLength): Likewise,
    (equals): Added check for new field.

2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/TextTitle.java
    (maximumLinesToDisplay): New field,
    (getMaximumLinesToDisplay): New method,
    (setMaximumLinesToDisplay): Likewise,
    (arrangeFN): Pass maximumLinesToDisplay,
    (arrangeRR): Likewise,
    (equals): Added tests for additional fields.

2008-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1950037:
    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java