@@ -1,3 +1,13 @@
+2008-05-08  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/ChartPanel.java
+    (zoomPoint): Changed from Point to Point2D,
+    (getPointInRectangle): Changed return type to Point2D, and no longer round
+    the coordinates in the returned point,
+    (mouseReleased): Tidied up for readability,
+    (restoreAutoDomainBounds): Updated for modified zoomPoint type,
+    (restoreAutoRangeBounds): Likewise.
+
 2008-05-07  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/category/BarRenderer.java
